manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sovannlyna-html-v16-deployment
  labels:
    app: sovannlyna-html-v16
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sovannlyna-html-v16
  template:
    metadata:
      labels:
        app: sovannlyna-html-v16
    spec:
      containers:
        - name: sovannlyna-html-v16-container
          image: pipejet/sovannlyna-html-v16:1
          ports:
            - containerPort: 80
