manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovannlyna-html-v16-service
spec:
  type: NodePort
  selector:
    app: sovannlyna-html-v16
  ports:
    - protocol: TCP
      port: 8183
      targetPort: 80
